# x.rag

./: .gitignore  .gitmodules  README.md  agent.go  go.mod  go.sum  index.go  main.go  pyproject.toml  xrag.nu
.treesitter/: config.json  query
milvus/: docker-compose.yml
src/xrag/: __init__.py  cli.py
